--- a/app/templates/all-templates/base.html
+++ b/app/templates/all-templates/base.html
@@ -1,15 +1,28 @@
+{% load bootstrap3 %}
+{% load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="utf-8">
+
+  <title> Moringa Tribune </title>
+
+  {% block styles %}
+    {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/basenews.css' %}">
+  {% endblock %}
+
 </head>
 <body>
     {% include "navbar.html" %}
-    
+
     {% block content %}
+     <h1 class='text-center'>Welcome</h1> 
+    {%endblock%}
+
+    {% block scripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     {% bootstrap_javascript %}
     {% endblock %}
     
 </body>
