--- a/static/css/base.css
+++ b/static/css/base.css
@@ -159,3 +159,7 @@ nav ul li ul li a {
   color: #463f3f;
   text-decoration: none;
 }
+.nav-container > .brand > a > h2{
+  font-family: 'Diplomata', cursive;
+  float: left;
+}
