--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -36,7 +36,7 @@
                             <li><a href="#!">Report injustices</a></li>
                         </ul>
                     </li>
-                    <li><a href="#!">Profile</a></li>
+                    <li><a href="{% url 'prof' %}">Profile</a></li>
                     <li><a href="#!">Contact us</a>
                         <ul class="nav-dropdown">
                             <li><a href="#">Health Services</a></li>
