--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -19,7 +19,8 @@
                     <form  action="/accounts/login/" method="post">
                         {% csrf_token %}
                         {% bootstrap_form form%}
-                        
+
+                        <p>Don't have an account? <a href="accounts/register/">Register here.</a></p>
                         <div class="form-group">
                             <input type="submit" class="btn btn-primary btn-sm" value="Login">
                         </div>
