--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -20,7 +20,7 @@
                         {% csrf_token %}
                         {% bootstrap_form form%}
 
-                        <p>Don't have an account? <a href="accounts/register/">Register here.</a></p>
+                        <p>Don't have an account? <a href="/accounts/register">Register here.</a></p>
                         <div class="form-group">
                             <input type="submit" class="btn btn-primary btn-sm" value="Login">
                         </div>
