--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -38,7 +38,7 @@
                     </li>
                     <li><a href="#!">Profile</a> 
                         <ul class="nav-dropdown">
-                            <li><a href="{% url 'prof' %}">View profile</a></li>
+                            <li><a href="{% url 'prof' username=user %}">View profile</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
                     </li>
