Add function to add neighbourhood

--- a/app/templates/all-templates/profile.html
+++ b/app/templates/all-templates/profile.html
@@ -12,5 +12,15 @@
     </div><br><br><br><br><br>
     <div class="username"><h2>{{profile.neighbourhood_name}}</h2></div>
 </div>
+
 {{form.media}}
 {% endblock %}
+
+<!-- <div class="row">
+    <div class="col-sm-3">
+        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-heart"></i></button><p>{{image_item.likes}} likes</p>
+    </div>
+    <div class="col-sm-3">
+        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-volume-up"></i></button>
+    </div>
+</div> -->
