--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -14,11 +14,10 @@
     {% endblock %}
 </head>
 <body>
-    <section class="navigation" style="color:steelblue;">
+    <section class="navigation">
         <div class="nav-container">
             <div class="brand">
                 <a href="#!">
-                    <!-- <h2>Watchmen</h2> -->
                 </a>
             </div>
             <nav>
@@ -39,7 +38,7 @@
                     <li ><a href="{% url 'hood' %}">Add Neighbourhood</a></li>
                     <li><a href="#!">Profile</a> 
                         <ul class="nav-dropdown">
-                            <li><a href="{% url 'prof' username=user %}">View profile</a></li>
+                            <li><a href="{% url 'prof' %}">View profile</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
                     </li>
@@ -121,7 +120,6 @@
         position: absolute;
         top: 0;
         right: 0;
-        background: blue;
         height: 70px;
         width: 70px;
     }
@@ -129,21 +127,17 @@
     @media only screen and (max-width: 800px) {
         .nav-mobile {
             display: block;
-            background-color:blue;
         }
         
         nav {
             width: 100%;
             padding: 70px 0 15px;
-            background-color:blue;
         }
         nav ul {
             display: none;
-            background-color:blue;
         }
         nav ul li {
             float: none;
-            background-color:blue;
         }
         nav ul li a {
             padding: 15px;
