--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,10 +4,6 @@ $content-width will be the max width of the content within the navigation bar.
 $breakpoint determines at which width the media query breakpoint will take effect.
 */
 
-body {
-  background-color: #63D6E0;
-}
-
 nav {
   float: right;
 }
@@ -60,7 +56,6 @@ nav ul li ul li a {
   position: absolute;
   top: 0;
   right: 0;
-  background: blue;
   height: 70px;
   width: 70px;
 }
@@ -68,21 +63,17 @@ nav ul li ul li a {
 @media only screen and (max-width: 800px) {
   .nav-mobile {
     display: block;
-    background-color:blue;
   }
 
   nav {
     width: 100%;
     padding: 70px 0 15px;
-    background-color:blue;
   }
   nav ul {
     display: none;
-    background-color:blue;
   }
   nav ul li {
     float: none;
-    background-color:blue;
   }
   nav ul li a {
     padding: 15px;
@@ -134,7 +125,6 @@ nav ul li ul li a {
 @media screen and (min-width: 800px) {
   .nav-list {
     display: block !important;
-    color:blue;
   }
 }
 /* 
@@ -166,4 +156,7 @@ nav ul li ul li a {
 .brand a:visited {
   color: #463f3f;
   text-decoration: none;
+}
+body{
+  color: white;
 }
