--- a/app/templates/all-templates/index.html
+++ b/app/templates/all-templates/index.html
@@ -1,6 +1,11 @@
 {%extends 'all-templates/base.html'%}
 {% block content %}
 <div class="container">
+    <div class="header">
+        <h1 class="text-center">NEIGHBOURHOOD WATCH</h1>
+        <h6 class="text-center">Add neighbourhoods and businessess</h6>
+        <hr>
+    </div>
     <div class="row">
         {% for neighbourhood_item in neighbourhoods %}
         <div class="col-md-4"><br><br>
@@ -9,12 +14,12 @@
                 <div class="card-body">
                     <h2 class=""><strong>{{neighbourhood_item.name}}</strong>:
                         {{neighbourhood_item.location}}</h2>
-                    <a href="/hood_details/{{neighbourhood_item.id}}" style="text-decoration:none;">
-                        <button class="btn btn-success btn-lg">Details</button></a>
+                        <a href="/hood_details/{{neighbourhood_item.id}}" style="text-decoration:none;">
+                            <button class="btn btn-success btn-lg">Details</button></a>
+                        </div><br>
+                    </div><br>
                 </div><br>
+                {% endfor %}
             </div><br>
-        </div><br>
-        {% endfor %}
-    </div><br>
-</div>
-{% endblock %}
+        </div>
+        {% endblock %}
